# GenXlink

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  BUILDING_EXACT_UI.md  BUILD_GUIDE.md  BUILD_MSIX.ps1  CERTIFICATION_READY.md  CERTIFICATION_SUBMISSION_GUIDE.md  COMPLETION_REPORT.md  COMPREHENSIVE_CHECK_REPORT.md  CONTRIBUTING.md  COPYRIGHT  CREATE_INSTALLER.ps1  CREATE_MSIX.ps1  CREATE_RELEASE.md  CURRENT_STATUS.md  Cargo.toml  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_SUMMARY.md  DISTRIBUTION_READY.md  Dockerfile  EXACT_UI_PLAN.md  FEATURE_IMPLEMENTATION_STATUS.md  FINAL_SUMMARY.md  FIX_AND_PUSH.md  FULL_APP_FEATURES.md  GenXLink.code-workspace  IMPLEMENTATION_GUIDE.md  INDEX.md  LICENSE  LICENSING_INFO.md  MSIX_SUBMISSION_GUIDE.md  NEXT_STEPS_DEPLOYMENT.md  NOTICE  PRIVACY_POLICY.md  PROBLEM_RESOLUTION_STATUS.md  (+44 more)
.github/: PULL_REQUEST_TEMPLATE.md
client/core/: Cargo.toml
client/core/src/: access_control.rs  adaptive_bitrate.rs  audio_capture.rs  audio_playback.rs  audio_stream_manager.rs  audio_streaming.rs  auth_service.rs  auto_update.rs  capture.rs  chat.rs  clipboard.rs  config.rs  connection_id.rs  connection_manager.rs  control_channel.rs  database.rs  device_registry.rs  encoder.rs  file_transfer.rs  file_transfer_enhanced.rs  gst_tunnel.rs  hardware_encoder.rs  input.rs  input_injection.rs  installation_id.rs  lan_discovery.rs  large_file_transfer.rs  lib.rs  localization.rs  multi_monitor.rs  p2p_discovery.rs  p2p_integration.rs  p2p_signaling.rs  performance.rs  performance_optimizer.rs  permission_profiles.rs  pipeline.rs  remote_control.rs  remote_control_manager.rs  role_based_access.rs  (+16 more)
client/core/tests/: integration_tests.rs  webrtc_tests.rs
client/crossplatform/: Cargo.toml
client/crossplatform/src/: main.rs
client/ui-demo/: Cargo.toml  genxlink-ui-demo-fixed.vcxproj  genxlink-ui-demo.vcxproj
client/ui-demo/src/: complete_features.rs  debug_app.rs  full_ui_demo.rs  original_ui.rs  simple_working_ui.rs  stable_app.rs  test_theme_lang.rs  ui_demo.rs  ultra_simple_test.rs
client/ui-demo/src/services/: connection_service.rs  discovery_service.rs  file_transfer_service.rs  mod.rs  session_service.rs
client/ui-demo/src/ui/: app.rs  devices.rs  file_transfer_panel.rs  main_window.rs  mod.rs  permission_panel.rs  premium_features.rs  remote_control_panel.rs  settings.rs  streaming_panel.rs
client/ui-demo/x64/Debug/: genxlink.exe.recipe
client/ui-demo/x64/Debug/genxlink-ui-demo.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  genxlink-ui-demo.lastbuildstate
client/webview-test/: Cargo.toml
client/webview-test/src/: html_content.rs  main.rs
client/windows/: Cargo.toml  README.md
client/windows/examples/: input_test.rs  screen_capture_test.rs  streaming_demo.rs
client/windows/src/: app.rs  config.rs  full_app.rs  icon.rs  lib.rs  license_manager.rs  main.rs  main_app.rs  simple_main.rs  simple_main_backup.rs  ui_demo.rs
client/windows/src/ui/: access_control_panel.rs  app.rs  auth_panel.rs  connection_dialog.rs  device_management_panel.rs  devices.rs  file_transfer_enhanced.rs  main_window.rs  mod.rs  notifications.rs  premium_features.rs  remote_control_panel.rs  screen_preview.rs  settings.rs  settings_panel.rs  status_panel.rs  streaming_panel.rs  toast_notification.rs
database/: README.md  supabase_schema.sql
deploy/: deploy.ps1  deploy.sh  railway.json  render.yaml
dev-server/: Cargo.toml
dev-server/src/: api_server.rs  signaling_server.rs
docs/: ADVANCED_FEATURES.md  API.md  API_DOCUMENTATION.md  AUDIO_LANGUAGE_THEME_FEATURES.md  COMPLETE_GUIDE.md  CONNECT_TO_DEVICE_GUIDE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  FEATURE1_COMPLETE.md  FEATURE1_PROGRESS.md  FEATURE1_STEP3_COMPLETE.md  FEATURE2_COMPLETE.md  FEATURES_IMPLEMENTED.md  FEATURE_AUDIT.md  FEATURE_ROADMAP.md  FINAL_BUILD_STATUS.md  FINAL_COMPLETE.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS_REPORT.md  FUTURE_FEATURES.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  PERMISSION_PROFILES_FEATURE.md  PHASE2_TASKS.md  PHASE3_COMPLETE.md  PHASE3_TASKS.md  PHASE4.1_COMPLETE.md  PHASE4_PROGRESS.md  PHASE4_TASKS.md  PHASE5_TASKS.md  PHASE6_COMPLETE.md  PHASE6_PROGRESS.md  PHASE6_TASKS.md  PLATFORM_API_PLAN.md  PREMIUM_AND_PERFORMANCE.md  PRICING_STRATEGY.md  PROJECT_STATUS_FINAL.md  (+12 more)
examples/: dev_server.rs  dev_signaling.rs  p2p_client.rs
installer/: BUILD_INSTALLER.md  GenXLink.nsi  genxlink-installer.nsi  genxlink-setup.iss  genxlink.iss  genxlink.wxs
mobile/flutter/bridge/: Cargo.toml
mobile/flutter/bridge/src/: lib.rs
monitoring/: prometheus.yml
msix-package/: AppxManifest.xml
nginx/: nginx.conf
scripts/: check.ps1  (+5 more)
server/: Cargo.toml  README.md
server/api/: Cargo.toml  Dockerfile
server/api/migrations/: 001_initial_schema.sql
server/api/src/: auth.rs  db.rs  handlers.rs  ldap_auth.rs  main.rs  main_simple.rs  models.rs
server/api/tests/: api_tests.rs
server/relay/: Cargo.toml
server/relay/src/: bandwidth_manager.rs  geographic_router.rs  lib.rs  load_balancer.rs  main.rs
server/signaling/: Cargo.railway.toml  Cargo.toml  Dockerfile  railway.toml
server/signaling/src/: main.rs  minimal.rs  peer_manager.rs  simple_main.rs  static.rs
server/src/: auth.rs  database.rs  device.rs  main.rs  signaling.rs
server/turn/: Dockerfile  README.md  docker-compose.yml  railway.json  turnserver.conf
shared/crypto/: Cargo.toml
shared/crypto/src/: e2e_encryption.rs  encryption.rs  lib.rs  signature.rs
shared/crypto/tests/: crypto_tests.rs
shared/licensing/: Cargo.toml
shared/licensing/src/: lib.rs  types.rs  validator.rs
shared/protocol/: Cargo.toml
shared/protocol/src/: connection.rs  device.rs  input.rs  lib.rs  messages.rs  signaling.rs
shared/protocol/tests/: message_tests.rs
tests/: Cargo.toml  e2e_tests.rs  e2e_ui_tests.rs  stress_tests.rs
tests/integration/: performance_tests.rs  security_tests.rs  webrtc_tests.rs
tests/src/: lib.rs  main.rs
(+42 files in other folders)
