[workspace]
members = [
    "client/windows",
    "client/core",
    "client/ui-demo",
    "client/webview-test",
    "server",
    "server/api",
    "server/signaling",
    "server/relay",
    "shared/protocol",
    "shared/crypto",
    "shared/licensing",
    "dev-server",
]
# Exclude client for Docker builds (Railway)
exclude = []
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GenXis Innovations"]
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Networking
webrtc = "0.9"
tokio-tungstenite = "0.21"  # WebSocket for signaling
futures = "0.3"
quinn = "0.10"
hyper = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ring = "0.17"
aes-gcm = "0.10"
rsa = "0.9"
sha2 = "0.10"
rand = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "sqlite"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# UI
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["image"] }
image = "0.25"

# Video encoding (handled in client/core as optional)
mp4 = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration
config = "0.13"
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }

# Additional dependencies for relay server
tower-http = { version = "0.5", features = ["cors", "trace"] }
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
flate2 = "1.0"
zstd = "0.13"
hmac = "0.12"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
