[package]
name = "genxlink-dev-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/api_server.rs"

[[bin]]
name = "signaling-server"
path = "src/signaling_server.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
