[package]
name = "genxlink-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-ws = "0.2"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"

[dependencies.genxlink-protocol]
path = "../shared/protocol"
