[package]
name = "genxlink-client-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
webrtc = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
bytes = "1.5"

# Video encoding
openh264 = "0.6"  # H.264 encoding
yuv = "0.1"       # YUV color space conversion
mp4 = "0.14"      # MP4 container
image = { workspace = true }  # Image encoding
rand = "0.8"      # Random number generation for SSRC
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }

# GenXLink dependencies
genxlink-protocol = { path = "../../shared/protocol" }
genxlink-crypto = { path = "../../shared/crypto" }
genxlink-licensing = { path = "../../shared/licensing" }

# Platform-specific
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "implement",
] }

# Video encoding (optional for now - Phase 2 TODO)
ffmpeg-next = { version = "6.1", optional = true }

[features]
default = []
ffmpeg = []  # Enable when FFmpeg is ready
