[package]
name = "genxlink-crossplatform"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "genxlink-gui"
path = "src/main.rs"

[dependencies]
# GUI Framework - EGUI for cross-platform support
egui = "0.27"
eframe = { version = "0.27", features = ["default_fonts", "glow"] }
egui_extras = { version = "0.27", features = ["image", "svg"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Core GenXLink Modules
genxlink-core = { path = "../../client/core" }
genxlink-protocol = { path = "../../shared/protocol" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"
dirs = "5.0"

# Image Handling
image = { version = "0.24", features = ["png", "jpeg"] }

# System Integration
arboard = "3.3"  # Clipboard
notify = "6.1"   # File system notifications

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
glib = "0.18"

# Network
reqwest = { version = "0.11", features = ["json"] }
websocket = "0.26"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
