[package]
name = "genxlink-ui-demo"
version = "1.0.0"
edition = "2021"
authors = ["GenXis Innovations"]
license = "Apache-2.0"

[[bin]]
name = "genxlink"
path = "src/complete_features.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
anyhow = "1.0"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
hostname = "0.3"
