[package]
name = "genxlink-webview-test"
version = "1.0.0"
edition = "2021"
authors = ["GenXis Innovations"]
license = "Apache-2.0"
description = "WebView-based testing interface for GenXLink"

[[bin]]
name = "webview-test"
path = "src/main.rs"

[dependencies]
# WebView
wry = "0.44"
tao = "0.30"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# HTTP server for local content
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# WebSocket for signaling
tokio-tungstenite = "0.21"
futures = "0.3"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.31"
