[package]
name = "genxlink-windows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "genxlink"
path = "src/main_app.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
env_logger = "0.10"
futures = { workspace = true }
rand = "0.8"

# GenXLink dependencies
genxlink-client-core = { path = "../core" }
genxlink-protocol = { path = "../../shared/protocol" }
genxlink-crypto = { path = "../../shared/crypto" }
genxlink-licensing = { path = "../../shared/licensing" }

# UI
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
image = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
open = "5.0"

# i18n and Localization
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7"
fluent = "0.16"
fluent-langneg = "0.13"
lazy_static = "1.4"
unic-langid = { version = "0.9", features = ["macros"] }

# Configuration
notify = { version = "6.0", features = ["serde"] }
