[package]
name = "genxlink-api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "genxlink-api"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# JWT
jsonwebtoken = "9.2"
bcrypt = "0.15"

# GenXLink dependencies
genxlink-protocol = { path = "../../shared/protocol" }
genxlink-crypto = { path = "../../shared/crypto" }
genxlink-licensing = { path = "../../shared/licensing" }
