[package]
name = "genxlink-licensing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
genxlink-crypto = { path = "../crypto" }
genxlink-protocol = { path = "../protocol" }
